# Sys

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test.sh
.github/workflows/: cmake-test.yml
Config/: Sys.cmake.in
cfg/: Sys.cmake.in  SysCore.cmake.in  SysFtx.cmake.in  SysFtxCore.cmake.in  SysInet.cmake.in  SysInetCore.cmake.in  SysSock.cmake.in  SysThrd.cmake.in  SysThrdCore.cmake.in  SysTrm.cmake.in
cmake/: Core.cmake
impl/: CMakeLists.txt
impl/inc/ae2f/Sys/: Ftx.h  Inet.h  Sock.h  Thrd.h  Trm.h
impl/inc/ae2f/Sys/.ftx/: core.h
impl/inc/ae2f/Sys/.inet/: core.h
impl/inc/ae2f/Sys/.sock/: core.h
impl/inc/ae2f/Sys/.thrd/: core.h
impl/inc/ae2f/Sys/.trm/: core.h
impl/src/ftx/: futex.c  linux.c  openbsd.c  others.c  pthread.c  syscall.c  waitonaddr.c  windows.c
impl/src/inet/: others.c  windows.c
impl/src/sock/: others.c  windows.c
impl/src/thrd/: linux.c  others.c  pthread.c  windows.c
impl/src/trm/: others.c  windows.c
impl/test/ftx/: includes.c
impl/test/thrd/: includes.c
inc/ae2f/: Sys.h
inc/ae2f/Sys/: Dir.core.h  Dir.h  Fd.h  Ftx-POSIX.h  Ftx-WIN.h  Ftx-_linux.h  Ftx.core.h  Ftx.h  Inet-POSIX.h  Inet-WIN.h  Inet.core.h  Inet.h  PgAlloc.h  Proc.h  So.h  Sock.core.h  Sock.h  Thrd.core.h  Thrd.h  ThrdEx.h  Trm.core.h  Trm.h  WSock.h  probe.h
inc/ae2f/Sys/WSock/: README.md
inc/ae2f/Sys/probe/: apple.h  bsdi.h  freebsd.h  linux.h  netbsd.h  openbsd.h  unix.h  win32.h  win64.h  windows.h
src/ftx/: POSIX.def.c  WIN.def.c  _linux.def.c
src/inet/: POSIX.def.c  WIN.def.c
src/sock/: POSIX.def.c  WIN.def.c  _linux.def.c
src/sys/: Dir.def.cc  Fd.def.cc  Ftx-POSIX.def.c  Ftx-WIN.def.c  Ftx-_linux.def.c  Ftx.def.cc  PgAlloc.def.cc  Thrd.def.c  Thrd.def.cc  Thrd.imp.c
src/sys/WSock/: Block.def.cc
src/thrd/: POSIX.def.c  WIN.def.c  _linux.def.c
src/trm/: POSIX.def.c  WIN.def.c
test/: inet-startup-only.c  nothing.c  probe.c  thrd-basic.c  thrd-futex.c
test/enums/: Ftx.c  Inet.c
test/primal/: inet.c  inetcompiletest.c  thrdjoin.c  trm.c
